changed main and outer-section height to fix on safari and firefox

--- a/sass/layout/desktop_base_layout.scss
+++ b/sass/layout/desktop_base_layout.scss
@@ -8,7 +8,7 @@ html {
 
         main {
             width: 90%;
-            height: 100vh;
+            height: auto;
             margin: 0 auto;
 
             /*Snap Scroll*/
